# gym_training_bot

./: .env.dist  README.md  bot.py  pyproject.toml  requirements.txt
systemd/: training_tgbot.service
tgbot/: config.py
tgbot/buttons/: inline.py  reply.py
tgbot/constants/: commands.py
tgbot/filters/: __init__.py  trainee.py  trainer.py  user.py
tgbot/handlers/: echo.py
tgbot/handlers/users/: __init__.py  profile.py  settings.py  user.py
tgbot/handlers/users/trainees/: __init__.py  sessions.py  subscribe.py
tgbot/handlers/users/trainers/: __init__.py  plan.py  subscribe.py
tgbot/keyboards/: inline.py  reply.py
tgbot/migrations/: env.py
tgbot/migrations/versions/: 044912ad756c_user_id_fix.py  0d62e2168233_sessions_history.py  6481bbf01f06_user_fullname.py  7494f4776c67_register_date.py  8044fa55c26e_training_plans.py  f022722bfcff_subscribes.py  f0fffd796273_initial_user.py
tgbot/misc/: enum.py  states.py
tgbot/models/: base.py  sessions.py  subscribe.py  training.py  user.py
tgbot/utils/: bot.py  text.py  user.py
